# cabincrew-protocol

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  requirements-dev.txt  tsconfig.json  verify_python_import.py
.github/workflows/: ci.yml
docs/: approvals.md  architecture-diagrams.md  design-philosophy.md  engine-implementers-guide.md  gateway-implementers-guide.md  getting-started.md  governance.md  integration-patterns.md  llm-safety-guide.md  manifesto-compliance.md  mcp-integration-guide.md  orchestrator-implementers-guide.md  orchestrator.md  security.md  workflow-lifecycle.md
docs/schemas/: artifact.mdx  audit-event.mdx  engine.mdx  llm-gateway.mdx  mcp-gateway.mdx  orchestrator.mdx  plan-token.mdx
lib/go/: go.mod
lib/nodejs/: README.md  package-lock.json  package.json  tsconfig.json
lib/python/: README.md  pyproject.toml
lib/python/src/cabincrew_protocol/: __init__.py  artifact.py  audit.py  engine.py  gateway_llm.py  gateway_mcp.py  orchestrator.py  plantoken.py  protocol.py  shared.py
schemas/draft/: artifact.schema.json  audit-event.schema.json  engine.schema.json  llm-gateway.json  mcp-gateway.json  orchestrator.json  orchestrator.schema.json  schema.json  (+2 more)
src/: audit.ts  engine.ts  gateway_llm.ts  gateway_mcp.ts  generate-go.ts  generate-nodejs.ts  generate-schemas.ts  index.ts  orchestrator.ts  plantoken.ts
tests/: smoke_test_go.go  smoke_test_nodejs.ts  smoke_test_python.py
tools/: README.md  generate-go.ts  generate-nodejs.ts  generate-python.ts  generate-schema.ts  generate-schemas.ts
(+28 files in other folders)
